Award section styled

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
     <!-- /header -->
     <!-- main -->
     <main class="main_section txt_center">
-      <!-- first_section -->
+      <!-- award_section -->
       <div class="first_section_wrapper">
-        <div class="first_section container_m">
+        <div class="first_section container_m pb-8">
           <p class="above_below_title">headache free</p>
           <h2 class="section_title">award winning <br> moving company</h2>
           <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">read our testimonials</button>
         </div>
       </div>
-      <!-- /first_section -->
+      <!-- /award_section -->
       <!-- professionals_section -->
       <div class="second_section container_l">
         <p class="above_below_title">we are professional</p>
@@ -103,19 +103,19 @@
           <div class="box">
             <img src="img/avada-movers-serviceonephoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">two man teams</h3>
-            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicetwophoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">we do all the lifting</h3>
-            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicethreephoto-final.jpg" alt="logo_image">
             <h3 class="third_title">coast to coast</h3>
-            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
         </div>
