Professional section styled

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
       <!-- /award_section -->
       <!-- professionals_section -->
-      <div class="second_section container_l">
+      <div class="second_section container_l pb-15">
         <p class="above_below_title">we are professional</p>
         <h2 class="section_title">full-service solution</h2>
         <div class="flex_boxes">
