Testimonials section styled

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
       <!-- /third_section -->
       <!-- testimonials_section -->
       <div class="fourth_section_wrapper">
-        <div class="fourth_section container_l">
+        <div class="fourth_section container_l pb-15">
           <p class="above_below_title">happy customers</p>
           <h2 class="section_title">testimonials</h2>
-          <div class="flex_boxes">
+          <div class="flex_boxes pt-4 pb-10">
             <div class="box">
               <img src="img/avada-movers-johndoe-final.jpg" alt="johndoe_photo">
               <h3 class="third_title">john doe</h3>
