ease section setted&styled

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- award_section -->
       <div class="first_section_wrapper">
         <div class="first_section container_m pb-8">
-          <p class="above_below_title">headache free</p>
+          <p class="above_below_title pt-16 pb-2">headache free</p>
           <h2 class="section_title">award winning <br> moving company</h2>
           <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">read our testimonials</button>
@@ -97,7 +97,7 @@
       <!-- /award_section -->
       <!-- professionals_section -->
       <div class="second_section container_l pb-15">
-        <p class="above_below_title">we are professional</p>
+        <p class="above_below_title pt-16 pb-2">we are professional</p>
         <h2 class="section_title">full-service solution</h2>
         <div class="flex_boxes pt-4">
           <div class="box">
@@ -121,15 +121,20 @@
         </div>
       </div>
       <!-- /professionals_section -->
-      <!-- third_section -->
-      <div class="third_section">
-
+      <!-- ease_section -->
+      <div class="ease_section_wrapper pt-60 pb-60">
+        <div class="container_m pb-4">
+          <p class="above_below_title pt-6 pb-3">we remove the headache from moving</p>
+          <h2 class="section_title">move with ease</h2>
+          <p class="smooth_par pt-4 pl-8 pr-8 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <button type="button" name="button">get a free quote now</button>
+        </div>
       </div>
-      <!-- /third_section -->
+      <!-- /ease_section -->
       <!-- testimonials_section -->
       <div class="fourth_section_wrapper">
         <div class="fourth_section container_l pb-15">
-          <p class="above_below_title">happy customers</p>
+          <p class="above_below_title pt-16 pb-2">happy customers</p>
           <h2 class="section_title">testimonials</h2>
           <div class="flex_boxes pt-4 pb-10">
             <div class="box">
