Rename main classes &  reorganization main Partials

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <!-- main -->
     <main class="main_section txt_center">
       <!-- award_section -->
-      <div class="first_section_wrapper">
-        <div class="first_section container_m pb-8">
+      <div class="award_section_wrapper">
+        <div class="award_section container_m pb-8">
           <p class="above_below_title pt-16 pb-2">headache free</p>
           <h2 class="section_title">award winning <br> moving company</h2>
           <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -96,7 +96,7 @@
       </div>
       <!-- /award_section -->
       <!-- professionals_section -->
-      <div class="second_section container_l pb-15">
+      <div class="professionals_section container_l pb-15">
         <p class="above_below_title pt-16 pb-2">we are professional</p>
         <h2 class="section_title">full-service solution</h2>
         <div class="flex_boxes pt-4">
@@ -132,8 +132,8 @@
       </div>
       <!-- /ease_section -->
       <!-- testimonials_section -->
-      <div class="fourth_section_wrapper">
-        <div class="fourth_section container_l pb-15">
+      <div class="testimonials_section_wrapper">
+        <div class="testimonials_section container_l pb-15">
           <p class="above_below_title pt-16 pb-2">happy customers</p>
           <h2 class="section_title">testimonials</h2>
           <div class="flex_boxes pt-4 pb-10">
@@ -158,8 +158,8 @@
       </div>
       <!-- /testimonials_section -->
       <!-- request_section -->
-      <div class="fifth_section_wrapper">
-        <div class="fifth_section container_m pt-15 pb-10">
+      <div class="request_section_wrapper">
+        <div class="request_section container_m pt-15 pb-10">
           <h2 class="section_title">request a free quote</h2>
           <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">click here</button>
