--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
       <div class="top_footer">
         <div class="container_l">
           <!-- box_1 -->
-          <div class="box mt-8 mb-8">
-            <h4>about</h4>
+          <div class="box mt-10 mb-10">
+            <h4 class="mb-5">about</h4>
             <div class="par_mage flex_col">
               <p class="smooth_par mr-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               <div class="logo flex_al">
@@ -184,8 +184,8 @@
           </div>
           <!-- /box_1 -->
           <!-- box_2 -->
-          <div class="box mt-8 mb-8">
-            <h4>avada movers</h4>
+          <div class="box mt-10 mb-10">
+            <h4 class="mb-5">avada movers</h4>
             <ul class="flex_col">
               <li v-for="(item,index) in avadaLinks" v-if="index !=3 && index !=5"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
               <!-- <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>home</a></li>
@@ -197,8 +197,8 @@
           </div>
           <!-- /box_2 -->
           <!-- box_3 -->
-          <div class="box mt-8 mb-8">
-            <h4>recent posts</h4>
+          <div class="box mt-10 mb-10">
+            <h4 class="mb-5">recent posts</h4>
             <ul class="flex_col">
               <li v-for="item in recentPost"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
               <!-- <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>heading out to collage?</a></li>
