resizing logo, h1, hero height, padding cta section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <!-- /top_nav_bar -->
       <div class="hero_wrapper">
         <!-- bottom_nav_bar -->
-        <div class="bottom_nav_bar container_l nav_Flex">
+        <div class="bottom_nav_bar container_l nav_Flex pt-2">
           <!-- logo -->
-          <div class="logo flex_al">
+          <div class="logo flex_al pt-2">
             <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
           </div>
           <!-- /logo -->
@@ -78,7 +78,7 @@
       <!-- cta -->
       <div class="cta_section flex">
         <i class="far fa-paper-plane mr-2"></i>
-        <p class="mt-8 mb-8">get a free quote online now!</p>
+        <p class="mt-10 mb-10">get a free quote online now!</p>
       </div>
       <!-- /cta -->
     </header>
