resizing padding award /professionals/ease section

--- a/index.html
+++ b/index.html
@@ -87,42 +87,42 @@
     <main class="main_section txt_center">
       <!-- award_section -->
       <div class="award_section_wrapper">
-        <div class="award_section container_m pb-8">
-          <h4 class="above_below_title pt-16 pb-2">headache free</h4>
+        <div class="award_section container_m pb-10">
+          <h4 class="above_below_title pt-18 pb-4">headache free</h4>
           <h2 class="section_title">award winning <br> moving company</h2>
-          <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="smooth_par pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">read our testimonials</button>
         </div>
       </div>
       <!-- /award_section -->
       <!-- professionals_section -->
-      <div class="professionals_section container_l pb-15">
-        <h4 class="above_below_title pt-16 pb-2">we are professional</h4>
-        <h2 class="section_title">full-service solution</h2>
+      <div class="professionals_section container_l pb-18">
+        <h4 class="above_below_title pt-18 pb-4">we are professional</h4>
+        <h2 class="section_title mb-5">full-service solution</h2>
         <div class="flex_boxes pt-4">
-          <div class="box">
+          <div class="box pb-4">
             <img src="img/avada-movers-serviceonephoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">two man teams</h3>
-            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicetwophoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">we do all the lifting</h3>
-            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicethreephoto-final.jpg" alt="logo_image">
             <h3 class="third_title">coast to coast</h3>
-            <p class="smooth_par pr-4 pl-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="smooth_par pr-4 pl-4 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button type="button" name="button">read more</button>
           </div>
         </div>
       </div>
       <!-- /professionals_section -->
       <!-- ease_section -->
-      <div class="ease_section_wrapper pt-60 pb-60">
+      <div class="ease_section_wrapper pt-70 pb-70">
         <div class="container_m pb-4">
           <h4 class="above_below_title pt-6 pb-3">we remove the headache from moving</h4>
           <h2 class="section_title">move with ease</h2>
