resizing padding/margin testimonials section

--- a/index.html
+++ b/index.html
@@ -133,24 +133,24 @@
       <!-- /ease_section -->
       <!-- testimonials_section -->
       <div class="testimonials_section_wrapper">
-        <div class="testimonials_section container_l pb-15">
-          <h4 class="above_below_title pt-16 pb-2">happy customers</h4>
-          <h2 class="section_title">testimonials</h2>
+        <div class="testimonials_section container_l pb-16">
+          <h4 class="above_below_title pt-18 pb-4">happy customers</h4>
+          <h2 class="section_title mb-2">testimonials</h2>
           <div class="flex_boxes pt-4 pb-10">
-            <div class="box">
+            <div class="box pr-2 pl-2">
               <img src="img/avada-movers-johndoe-final.jpg" alt="johndoe_photo">
               <h3 class="third_title">john doe</h3>
-              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             </div>
-            <div class="box">
+            <div class="box pr-2 pl-2">
               <img src="img/avada-movers-janedoe-final.jpg" alt="janedoe_photo">
               <h3 class="third_title">jane doe</h3>
-              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             </div>
-            <div class="box">
+            <div class="box pr-2 pl-2">
               <img src="img/avada-movers-johnsmith-final.jpg" alt="th_photo">
               <h3 class="third_title">john smith</h3>
-              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             </div>
           </div>
           <button type="button" name="button">read our testimonials</button>
