resizing margin/padding request section

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
       <!-- /testimonials_section -->
       <!-- request_section -->
       <div class="request_section_wrapper">
-        <div class="request_section container_m pt-15 pb-10">
+        <div class="request_section container_m pt-18 pb-12">
           <h2 class="section_title">request a free quote</h2>
-          <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p class="smooth_par mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">click here</button>
         </div>
       </div>
