fix: mb/h2/request_section

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <!-- request_section -->
       <div class="request_section_wrapper">
         <div class="request_section container_m pt-18 pb-12">
-          <h2 class="section_title">request a free quote</h2>
+          <h2 class="section_title mb-2">request a free quote</h2>
           <p class="smooth_par mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <button type="button" name="button">click here</button>
         </div>
