setting ex cta_section as pseudoelement

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <!-- /hero -->
       </div>
       <!-- cta -->
-      <div class="cta_section flex">
+      <!-- <div class="cta_section flex">
         <i class="far fa-paper-plane mr-2"></i>
         <p class="mt-10 mb-10">get a free quote online now!</p>
-      </div>
+      </div> -->
       <!-- /cta -->
     </header>
     <!-- /header -->
