fix mixin backgroundimg: add variables

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- main -->
     <main class="main_section txt_center">
       <!-- award_section -->
-      <div class="award_section_wrapper">
+      <div class="award_section_wrapper mt-10">
         <div class="award_section container_m pb-10">
           <h4 class="above_below_title pt-18 pb-4">headache free</h4>
           <h2 class="section_title">award winning <br> moving company</h2>
